--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
   schedule: #each day at 1AM
     - cron:  '0 1 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -36,6 +37,19 @@ jobs:
       run: |-
         git diff
         git config --global user.email "readme-bot@example.com"
+        
+  build2:
+    runs-on: ubuntu-latest
+    name: generate-github-profile-summary-cards
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: vn7n24fzkq/github-profile-summary-cards@release
+        env: # default use ${{ secrets.GITHUB_TOKEN }}, you should replace with your personal access token
+          GITHUB_TOKEN: ${{ secrets.MICHAELB_TOKEN }}
+        with:
+          USERNAME: ${{ github.repository_owner }}
+        
         git config --global user.name "README-bot"
         git diff --quiet || (git add README.md && git commit -m "Updated README")
         git push
