--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -16,6 +16,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.MICHAELB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CARDS }}
         with:
           USERNAME: ${{ github.repository_owner }}
