--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: vn7n24fzkq/github-profile-summary-cards@release
+      - uses: michaelb/github-profile-summary-cards@v0.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.CARDS }}
         with:
