--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,9 +20,4 @@ jobs:
           base: header
           config_timezone: Europe/Paris
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-          plugin_lines: yes
-          plugin_habits: yes
-          plugin_habits_charts: yes
-          plugin_topics: yes
-          plugin_topics_mode: mastered
+          plugin_achievements: yes
