--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,3 +21,6 @@ jobs:
           config_timezone: Europe/Paris
           plugin_isocalendar: yes
           plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_ignored: octonaut
+          plugin_achievements_threshold: B
