--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,5 +22,6 @@ jobs:
           plugin_isocalendar: yes
           plugin_achievements: yes
           plugin_achievements_secrets: yes
-          plugin_achievements_ignored: octonaut, explorer, infographile
+          plugin_achievements_ignored: [octonaut, explorer, infographile]
           plugin_achievements_threshold: B
+          plugin_lines: yes
