--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,8 +20,8 @@ jobs:
           base: header
           config_timezone: Europe/Paris
           plugin_isocalendar: yes
+          plugin_traffic: yes
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_ignored: octonaut, explorer, infographile
           plugin_achievements_threshold: B
-          plugin_lines: yes
