--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
           # You'll need to setup a personal token in your secrets.
           token: ${{ secrets.CARDS }}
           # GITHUB_TOKEN is a special auto-generated token used for commits
-          committer_token: ${{ secrets.CARDS }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: michaelb
@@ -21,6 +21,7 @@ jobs:
           config_timezone: Europe/Paris
           plugin_isocalendar: yes
           plugin_traffic: yes
+          plugin_lines: yes
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_ignored: octonaut, explorer, infographile
