--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,7 +18,7 @@ jobs:
           # Options
           user: michaelb
           template: classic
-          base: header, repositories
+          base: header, activity, repositories
           config_timezone: Europe/Paris
           plugin_isocalendar: yes
           plugin_lines: yes
