--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
         git diff
         git config --global user.email "readme-bot@example.com"
         git config --global user.name "README-bot"
+        git config pull.rebase false
         git diff --quiet || (git add README.md && git commit -m "Updated README")
         git pull
         git push
