--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,9 @@ name: Metrics
 on:
   # Schedule updates
   schedule: [{cron: "0 0 * * *"}]
-  push: {branches: "master"}
+  push:
+    branches:
+      - "master"
   workflow_dispatch:
 jobs:
   github-metrics:
